--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -11,36 +11,6 @@ This document contains the [[http://www.mountaingoatsoftware.com/agile/scrum/pro
 
 Stories that we intend to look at in the very near future.
 
-*** Add canonical archetype support to yarn                           :story:
-
-We need to add a new attribute in context which captures the canonical
-archetypes.
-
-Notes:
-
-- kernel must also return canonical archetype by element type
-  index. Perhaps we should have a struct that aggregates both:
-  archetype locations for meta-type? Or kernel can just return a
-  =std::pair=.
-- at present we have placed the canonical archetype resolution as part
-  of the element properties. However, we do not need to have this at
-  the element level since its a meta-type property and can be
-  determined up-front. However, we do need to resolve a name into a
-  meta-type before we can resolve a meta-type into a concrete
-  archetype.
-- we need to unpick the notion of whether a formatter is "includible"
-  or not from the notion of canonical archetypes. Canonical archetypes
-  is meta-model concept: given a facet and a meta-model type, which
-  archetype represents the "key" definition of the element. It just so
-  happens that this function has a use in identifying the files to
-  include.
-
-Tasks:
-
-- add a map from name id to meta-name id in intermediate model.
-- add a map from meta name id to map of canonical archetype to
-  archetype location.
-
 *** =Nameable= concept moved position on code generation              :story:
 
 During the exogenous model work, yarn's =Nameable= concept moved
@@ -67,209 +37,6 @@ Tasks:
 - generate a main skeleton if one does not exist.
 - remove options project.
 
-*** Move enablement into yarn                                         :story:
-It seems that the concepts around enablement are actually not kernel
-specific but instead can be generalised at the meta-model level. We
-need to create adequate representations in yarn to handle facets,
-etc. We then need to move across the code that computes enablement
-into yarn so that all kernels can make use of it.
-
-Problems:
-
-- we are checking to see if the hash facet is enabled with c++ 98; if
-  so, we throw as this facet is incompatible. We cannot do this from
-  yarn since we do not know what c++ standards are.
-- because we do not have a mapping between a archetype location and
-  the meta-type, we will be enabling/disabling all archetype locations
-  across all meta-types.
-- because we do not have element segmentation, the element extensions
-  will be disabled. Actually this will probably work just the same,
-  given that all elements exist.
-- enablement must be done after external transformations so it picks
-  up fabric types.
-- we need to support formatting styles in order to be able to use the
-  artefact properties from the meta-model.
-- in quilt.cpp, someone did an upfront generation of all archetype
-  properties against the archetype locations. We not doing that in
-  yarn, so nothing is coming out. This was done during transformation
-  in formattables.
-- with a move into yarn, we seem to have broken the overwrite flag
-  logic; changes no longer result in new code being generated.
-- we also have borked the includes: dependency builder is looking into
-  the formattables instead of element. However, we then run into
-  segmentation issues because we cannot find forward declarations on
-  the main element.
-
-To do:
-
-- kernel registrar type index map - done.
-- c# formatter registrar type index map - done.
-- bug in template instantiating: artefact expansions do not seem to
-  take kernel into account - done.
-
-*Previous Understanding*
-
-We need to make use of the exact same logic as implemented in
-=quilt.cpp= for enablement. Perhaps all of the enablement related
-functionality can be lifted and grafted onto quilt without any major
-changes.
-
-*** Move formatting styles into yarn                                  :story:
-
-We need to support the formatting styles at the meta-model level.
-
-*** Move element segmentation into yarn                               :story:
-
-We've added the notion that an element can be composed of other
-elements in quilt, in order to handle forward declarations. However,
-with a little bit of effort we can generalise it into yarn. It would
-be useful for other things such as inner classes. We don't need to
-actually implement inner classes right now but we should make sure the
-moving of this feature into yarn is compatible with it.
-
-Notes:
-
-- seems like we have two use cases: a) we need all elements, master
-  and extensions and we don't really care about which is which. b) we
-  only want masters. However, we must be able to access the same
-  element properties from either the master or the extension. Having
-  said all that, it seems we don't really need all of the element
-  properties for both - forward declarations probably only need:
-  decoration and artefact properties.
-- we don't seem to use the map in formattables model anywhere, other
-  than to find master/extension elements.
-- Yarn model could have two simple list containers (masters and
-  all). Or maybe we don't even need this to start off with, we can
-  just iterate and skip extensions where required.
-- so in conclusion, we to move decoration, enablement and dependencies
-  into yarn (basically decoration and artefact properties) first and
-  then see where segmentation ends.
-
-Tasks:
-
-- add a concept for element extensions: =Extensible=. Contains a list
-  of element pointers.
-- populate it with the extensions.
-- change enablement to merge all element properties of extensible
-  elements.
-
-*** Create a yarn locator                                             :story:
-
-We need to move all functionality which is not kernel specific into
-yarn for the locator. This will exist in the helpers namespace. We
-then need to implement the C++ locator as a composite of yarn
-locator. It will live in fabric.
-
-*Other Notes*
-
-At present we have multiple calls in locator, which are a bit
-ad-hoc. We could potentially create a pattern. Say for C++, we have
-the following parameters:
-
-- relative or full path
-- include or implementation: this is simultaneously used to determine
-  the placement (below) and the extension.
-- meta-model element:
-- "placement": top-level project directory, source directory or
-  "natural" location inside of facet.
-- archetype location: used to determine the facet and archetype
-  postfixes.
-
-E.g.:
-
-: make_full_path_for_enumeration_implementation
-
-Interestingly, the "placement" is a function of the archetype location
-(a given artefact has a fixed placement). So a naive approach to this
-seems to imply one could create a data driven locator, that works for
-all languages if supplied suitable configuration data. To generalise:
-
-- project directory is common to all languages.
-- source or include directories become "project
-  sub-directories". There is a mapping between the artefact location
-  and a project sub-directory.
-- there is a mapping between the artefact location and the facet and
-  artefact postfixes.
-- extensions are a slight complication: a) we want to allow users to
-  override header/implementation extensions, but to do it so for the
-  entire project (except maybe for ODB files). However, what yarn's
-  locator needs is a mapping of artefact location to  extension. It
-  would be a tad cumbersome to have to specify extensions one artefact
-  location at a time. So someone has to read a kernel level
-  configuration parameter with the artefact extensions and expand it
-  to the required mappings. Whilst dealing with this we also have the
-  issue of elements which have extension in their names such as visual
-  studio projects and solutions. The correct solution is to implement
-  these using element extensions, and to remove the extension from the
-  element name.
-- each kernel can supply its configuration to yarn's locator via the
-  kernel interface. This is fairly static so it can be supplied early
-  on during initialisation.
-- there is still something not quite right. We are performing a
-  mapping between some logical space (the modeling space) and the
-  physical space (paths in the filesystem). Some modeling elements
-  such as the various CMakeLists.txt do not have enough information at
-  the logical level to tell us about their location; at present the
-  formatter itself gives us this hint ("include cmakelists" or "source
-  cmakelists"?). It would be annoying to have to split these into
-  multiple archetypes just so we can have a function between the
-  archetype location and the physical space. Although, if this is the
-  only case of a modeling element not mapping uniquely, perhaps we
-  should do exactly this.
-- However, we still have inclusion paths to worry about. As we done
-  with the source/include directories, we need to somehow create a
-  concept of inclusion path which is not language specific; "relative
-  path" and "requires relative path" perhaps? These could be a
-  function of archetype location.
-
-*** Move dependencies into yarn                                       :story:
-
-Actually the dependencies will be generated at the kernel level
-because 99% of the code is kernel specific. However, we need to make
-it an external transform.
-
-Tasks:
-
-- create the locator in the C++ external transform
-- create a dependencies transform that uses the existing include
-  generation code.
-
-*Previous understanding*
-
-It seems all languages we support have some form of "dependencies":
-
-- in c++ these are the includes
-- in c# these are the usings
-- in java these are the imports
-
-So, it would make sense to move these into yarn. The process of
-obtaining the dependencies must still be done in a kernel dependent
-way because we need to build any language-specific structures that the
-dependencies builder requires. However, we can create an interface for
-the dependencies builder in yarn and implement it in each kernel. Each
-kernel must also supply a factory for the builders.
-
-*** Generate file paths as a transform                                :story:
-
-Add a fabric transform for file path generation.
-
-*** Create "opaque" kernel and element properties                     :story:
-
-As part of the element container, we can have a set of base classes
-that are empty: =opaque_element_properties=. This class is then
-specialised in each kernel with the properties that are specific to
-it. We probably need an equivalent for:
-
-- kernel level properties
-- element level properties
-- attribute level properties.
-
-We then have to do a lot of casting in the helpers.
-
-Once we got these opaque properties, we can then create "kernel
-specific expanders" which are passed in to the yarn workflow. These
-populate the opaque properties.
-
 *** Add support for inline namespaces                                 :story:
 
 Enable c++17. - windows requires cpp latest. Then fix inner namespaces
@@ -279,25 +46,6 @@ We still need to support the old syntax for pre c++-17.
 
 We need to add a new standard to =quilt.cpp= and when its set to
 c++-17 we should automatically use inline namespaces.
-
-*** Move helpers into yarn                                            :story:
-
-Looking at helpers, it is clear that they are common to all
-languages. We just need to rename the terminology slightly -
-particularly wrt to streaming properties - and then move this code
-across into yarn.
-
-*** Move facet properties into yarn                                   :story:
-
-We should be able to handle these generically in yarn.
-
-*** Move ORM camel-case and databases into yarn                       :story:
-
-We should handle this property at the ORM level, rather than at the
-ODB level.
-
-Similarly, we should move the ODB databases into yarn and make that a
-ORM-level concept.
 
 *** Rename fabric and formattables                                    :story:
 
@@ -438,128 +186,6 @@ rather than generate clone methods for all objects in a model since it
 only makes sense for objects which have pointers. We need some
 meta-data knob to control the generation of the clone method.
 
-*** Investigate code-generation around annotations                    :story:
-
-We have two cases where code-generation makes sense for
-annotations. Let look at them in turn.
-
-*Type templates*
-
-At present we are supplying JSON files with type templates. In truth
-these are not really "data files" because changing them will cause
-problems to the system; its tightly coupled to them. It would make
-more sense to allow models to define their type templates inside the
-model itself. We could use a stereotype of
-=annotations::type_template= and then use meta-data for all of the
-fields, as per JSON, e.g.:
-
-:  {
-:    "name": {
-:      "simple": "profile",
-:      "qualified": "annotations.profile"
-:    },
-:    "archetype_location": {
-:      "family": "annotations"
-:    },
-:    "value_type": "text",
-:    "template_kind": "instance",
-:    "scope": "any"
-:  }
-
-We then code-generate the insertion of the type template into the
-annotations type templates repository via an initialisers-like
-framework.
-
-It may make more sense to have one UML class with all the type
-templates; the type templates then become attributes of that
-class. The problem then is what to name that class. also, we may want
-to have a couple of these, to group type templates logically (for
-example we want the top-level templates like =enabled= separated from
-the namespace-specific templates).
-
-But the gist of it is that its very straightforward to add some
-machinery that generates the code required to inject the type
-templates into the system, and that it is triggered during
-initialisation, replacing JSON loading.
-
-*Use of annotations*
-
-We then have the following usage pattern:
-
-- define a class with all the related fields (with types of the type
-  templates above). We call this class =type_group=. We may need to
-  instantiate it for specific fields, or by facet, etc. We need to
-  look at all of the examples in the code-base. Note that the layout
-  of this class will (likely) bear no resemblance to the type
-  templates grouping - this is just a "bag" with all of the available
-  type templates, whereas the type group aggregation does normally
-  have some useful meaning (e.g. =orm_properties=, etc).
-- define a "factory" class for the type group class that uses the
-  traits to locate the types (instances of type templates). For this,
-  the type group class attributes need to refer to the fully qualified
-  field name (possibly requiring some inputs such as kernel, facet).
-- define a c++ class with the properties we're interested in. We
-  normally call this class =_configuration= if its just used to read
-  the meta-data, or =_properties= if its used as a real type. Note
-  that at present we have allowed the layout of the type group class
-  and the properties/configuration classes to be possibly quite
-  different; we gather _all_ of the types of interest in the type
-  group class, but then have multiple properties/configuration classes
-  to match our needs.
-- finally, we define a "factory" class that takes in the type group
-  and produces the configuration/properties class.
-
-In a code-generated world:
-
-- we need to somehow force the type group class to match the
-  configuration class; this will probably result on a lot of
-  duplication. For example, for the ORM properties, we probably have a
-  couple in common across object/model/attributes.
-- we need to map C++ types into annotation types such that we can back
-  out the annotation type from a c++ type. For example, given an
-  enumeration, we want to create a annotation type of "text" but then
-  automatically generate the "from/to" converters for the enumeration.
-
-Merged stories:
-
-*Code generation of dynamic instances*
-
-We seem to have a pretty well established usage pattern for dynamic,
-so it may be a candidate for code generation. All we need is:
-
-- a stereotype to mark a class as dynamic; the attributes of the class
-  are dynamic fields, and their types must be one of the valid values
-  for dynamic fields. The default value is used for the field's
-  default value. Qualified name, ownership hierarchy, definition type,
-  scope, etc are supplied as meta-data.
-- stereotype name should be something like =DynamicFieldGroup=.
-- the injection of the settings class is done by looking at the
-  =DynamicFieldGroup= class and mapping the dynamic types to C++
-  types. Note: this mapping should be dynamic too so that we can use
-  it for other languages. We just need a meta-data tag for this, like
-  we do with default enum value.
-- the injection of the settings factory class is a bit more
-  complicated; we need to mark the object as a settings factory. At
-  present we have object types, but it was supposed to be removed
-  after a refactoring. Actually we just need to create a new kind of
-  element (=dynamic_settings_factory=?). In addition, settings factory
-  may also need to take in some parameters such as facet/formatter.
-- a stitch template that generates the settings factory.
-- a stitch template that registers the dynamic field definition;
-  instead of JSON we can just generate c++ code to perform the
-  injection.
-- we could also generate the repository and in most cases the
-  repository factory. The only case where this breaks down is when we
-  need to look at properties too.
-- we should have a number of knobs to control generation: a) generate
-  field injection b) generate settings factory c) generate repository
-  d) generate repository factory.
-
-We also need to merge the traits class directly into the factory. In
-the majority of cases, we have traits just to access the fields. But
-there are a few cases where we use traits for other purposes such as
-formatter naming.
-
 *** Add support for boost pointer container                           :story:
 
 It should be fairly straightforward to add support for the boost
@@ -582,16 +208,6 @@ At present, our C++ wrappers on top of LibXml are using the file based
 interface. We should do in-memory processing of the XML file. Once
 this is in place, we can change the exogenous transformers to use
 strings rather than paths to files.
-
-*** Initialisation of meta-data                                       :story:
-
-At present we are reading meta-data files for every transformation. In
-reality, it makes no sense to allow the meta-data files to change
-dynamically, because the consumers of the meta-data are hard-coded. So
-it would make more sense to treat them as a initialisation step. This
-will make even more sense when we code-generate the types instead of
-using JSON. Then we can hook up the generated code to the
-initialisers.
 
 *** Make creating new facets easier                                   :story:
 
@@ -1418,11 +1034,6 @@ We seem to be generating an "Assistant" type on the =primitve= test model:
 
 Figure out what this type is and why its appearing on this test model.
 
-*** Make the Zeta model compilable                                    :story:
-
-We need to work through the list of issues with the Zeta model and get
-it to a compilable state.
-
 *** Finish adding support for Language Agnostic Models (LAM)          :story:
 
 Tasks:
@@ -1791,7 +1402,7 @@ In addition, we should also wait for the model level stereotypes. We
 should have a system model that enables/disables formatters, sets the
 overwrite flags, etc.
 
-*** Add support for arrays                                            :story:
+*** Add support for native arrays                                     :story:
 
 At present the legacy yarn parser does not support array notation:
 =string[]=. We need to look into how arrays would work for C++ and
@@ -2380,20 +1991,6 @@ themselves.
 Perhaps we should add general support for attributes. This would be
 useful for languages like C# and Java, to control serialisation, etc.
 
-*** Add a frontend for visual studio models                           :story:
-
-It should be "fairly straightforward" to add a frontend for visual
-studio. A sample project has been added to test data:
-
-: test_data/visual_studio_modeling
-
-We should also extend tailor to output these projects so we can test
-it with existing models.
-
-Note that the XMI support approach may make this unnecessary. Where
-possible, we should just use XMI instead of having lots of different
-exogenous models.
-
 *** Create a tool to generate product skeletons                       :story:
 
 Now that dogen is evolving to a MDSD tool, it would be great to be
@@ -2632,21 +2229,6 @@ With the introduction of assistants in C#, we now have overloaded the
 term. We need to find another name to refer to the formatting
 assistant in C++ so avoid confusion.
 
-*** Distinguish between meta-types that require canonical archetypes  :story:
-
-At present it is not possible to know which meta-types require
-canonical archetypes and which don't. In the validation we said:
-
-:         * We must have one canonical formatter per type per facet.
-:         * FIXME: this check is broken at the moment because this is
-:         * only applicable to yarn types, not fabric types. It is also
-:         * not applicable to forward declarations. We need some
-:         * additional information from yarn to be able to figure out
-:         * which types must have a canonical archetype.
-
-We should have some kind of flag in yarn to distinguish. This still
-requires a bit of thinking.
-
 *** Consider simplifying frontend testing                             :story:
 
 At present we are outputting code for every supported frontend, and
@@ -2663,13 +2245,16 @@ This is a problem specially in light of adding new backends because
 now we are code-generating the cross product of frontends and
 backends.
 
-*** Problems in tailor generation                                     :story:
+*** Problems in tailor generation of dogen models                     :story:
+
+We converted all of dogen's models from dia into JSON using tailor and
+code-generated them to see if there were any differences.
 
 Address these issues:
 
-- problems with quilt.cpp and yarn.dia/yarn.json: the conversion of
-  the model path did not work as expected - we do not know of the "."
-  separator. Fixed it manually and then it all worked (minus
+- problems with =quilt.cpp= and =yarn.dia=/=yarn.json=: the conversion
+  of the model path did not work as expected - we do not know of the
+  "."  separator. Fixed it manually and then it all worked (minus
   CMakeLists, see below). We could possibly fix the builder to
   automatically use the "." to separate model paths.
 - CMakeLists were deleted on all models for some reason, even though
@@ -2679,9 +2264,11 @@ Address these issues:
   exception. Not sure why that is, nor why it is that we are including
   them for forward declarations.
 - Missing include of registrar serialisation in
-  all_ser.hpp. Instability in registrar_ser.cpp, but content is
+  =all_ser.hpp=. Instability in =registrar_ser.cpp=, but content is
   correct otherwise.
-- database.json generated invalid JSON.
+- =database.json= generated invalid JSON.
+
+"Script":
 
 #+begin_src
 rm *.json
@@ -2689,6 +2276,11 @@ A="dia knit quilt.cpp wale yarn.json annotations formatters quilt yarn database 
 for a in $A; do /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/dogen.tailor -t $a.dia -o $a.json; done
 for a in $A; do /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/dogen.knitter -t ${a}.json --cpp-project-dir /home/marco/Development/DomainDrivenConsulting/dogen/projects --ignore-files-matching-regex .*/CMakeLists.txt --ignore-files-matching-regex .*/test/.* --ignore-files-matching-regex .*/tests/.* --verbose --delete-extra-files; done
 #+end_src
+
+In an ideal world, we should probably have a script that we run as
+part of =knit_and_stitch= that converts to tailor and then runs
+knitter on the models, so that we keep track of tailor breaks outside
+of JSON test models.
 
 *** Do not include algorithm if swap is disabled                      :story:
 
@@ -2705,15 +2297,6 @@ at the yarn level for this.
 This is a bit more relevant now we are generating wale templates
 because we are including algorithm all over the place on the generated
 templates.
-
-*** Tidy-up of inclusion terminology                                  :story:
-
-Random notes:
-
-- imports and exports
-- some types support both (headers)
-- some support imports only (cpp)
-- some support neither (cmakelists, etc).
 
 *** Implement qualified name efficiently                              :story:
 
@@ -2770,11 +2353,6 @@ inherits from enable all facets; when we merge against "disable cmake"
 we do not know that cmake was enabled via "enable all facets" and so
 this takes priority.
 
-*** Remove object types in yarn                                       :story:
-
-We need to figure out if this enumeration is still in use and if not
-what needs to be done to remove it.
-
 *** Order of headers is hard-coded                                    :story:
 
 In inclusion expander, we have hacked the sorting:
@@ -2789,10 +2367,6 @@ In inclusion expander, we have hacked the sorting:
 
 This could be handled via meta-data, supplying some kind of flag (sort last?).
 
-*** Registrar in quilt is not being generated                         :story:
-
-We don't seem to change the contents of this file when regenerating.
-
 *** Investigate helper generation in formattables                     :story:
 
 We seem to be generating an helper for every node of every name tree,
@@ -2806,6 +2380,17 @@ there is more to it.
 We could mark all used elements during resolution and then during the
 transformation into the final model, we could drop all unused
 elements.
+
+This makes even more sense once we move all of the dependency
+generation code from the kernels into yarn, because then only
+generated types are required. This means we have two levels of
+removal:
+
+- types which are not referenced during resolution: slightly more
+  complicated now that we resolve in multiple places.
+- types which are not generatable.
+
+We could create transforms for each of these.
 
 Merged stories:
 
@@ -2822,11 +2407,6 @@ which are not in use. This could be done as part of model assembly.
 One way this could be achieved is by adding a "usages" property,
 computed during resolution. Resolver could keep track of the
 non-target names that are in use and return those.
-
-*** Add test model sanitizer to test models target                    :story:
-
-At present if we build test models we don't seem to build the
-sanitizer.
 
 *** Model should contain set of built-in id's                         :story:
 
@@ -3391,19 +2971,6 @@ We need to replace uses of =tab-width= in cmake files with
 We need to do this for both code generated and manually generated
 files.
 
-*** Stitcher log file names look weird                                :story:
-
-At present we are writing files with names like:
-
-: dogen.stitcher...log
-
-*** ODB options file is generated to incorrect location               :story:
-
-Models with composite names seem to have their ODB options file
-generated under the =projects= directory, e.g.:
-
-: projects/vtk/geometry/src/options.odb
-
 *** Reference to non-existent dynamic fields produce unhelpful errors :story:
 
 When renaming fields, we get the following dogen errors:
@@ -3649,6 +3216,13 @@ a run all specs, in particular:
 this may be because we have no specs for them. We need to find a way
 to build them somehow.
 
+Merged stories:
+
+*Add test model sanitizer to test models target*
+
+At present if we build test models we don't seem to build the
+sanitizer.
+
 *** Improve error reporting around JSON                               :story:
 
 At present when we break the JSON we get errors like so:
@@ -3714,7 +3288,7 @@ since we need to use this data for other purposes, the main workflow
 could take on this responsibility - or we could create some kind of
 "validator" class to which the workflow delegates.
 
-*** Add field definition description                                  :story:
+*** Add annotation types description                                  :story:
 
 It would be useful to have a description of the purpose of the field
 so that we could print it to the command line. We could simply add a
@@ -3722,28 +3296,43 @@ JSON attribute to the field called description to start off with. But
 ideally we need a command line argument to dump all fields and their
 descriptions so that users know what's available.
 
-*** Add importers and backends to =info= command line option          :story:
+This should be sorted by qualified name.
+
+*** Add frontends and backends to =info= command line option          :story:
 
 #+begin_quote
-*Story*: As a dogen user, I want to know what importers and backends
+*Story*: As a dogen user, I want to know what frontends and backends
 are available in my dogen version so that I don't try to use features
 that are not present.
 #+end_quote
 
 With the static registration of importers and backends, we should add
 some kind of mechanism to display whats on offer in the command line,
-via the =--info= option. This is slightly tricky because the
-=importer= and =backend= models do not know of the command line. We
-need a method in the importers that returns a description and a method
-in the workflow that returns all descriptions. These must be
-static. The knitter can then call these methods and build the info
-text.
+via the =--info= option. This is slightly tricky because the fronend
+and backend models do not know of the command line. We need a method
+in the frontend that returns a description and a method in the
+workflow that returns all descriptions. These must be static. The
+knitter can then call these methods and build the info text.
 
 ** In current major release
 
 The release will not be made unless these stories are closed, but we
 won't be addressing them in the near term. This release is all about
 getting the architecture right.
+
+*** Add a frontend for visual studio models                           :story:
+
+It should be "fairly straightforward" to add a frontend for visual
+studio. A sample project has been added to test data:
+
+: test_data/visual_studio_modeling
+
+We should also extend tailor to output these projects so we can test
+it with existing models.
+
+Note that the XMI support approach may make this unnecessary. Where
+possible, we should just use XMI instead of having lots of different
+exogenous models.
 
 *** Add support for "project capitalisation"                          :story:
 
