--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,17 +14,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-31 Thu 09:01]
+#+CAPTION: Clock summary at [2017-08-31 Thu 09:06]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *2:06* |      |      | 100.0 |
+| *Total time*                                                                | *2:10* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 2:06   |      |      | 100.0 |
-| Active                                                                      |        | 2:06 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  34.9 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  23.8 |
-| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  41.3 |
+| Stories                                                                     | 2:10   |      |      | 100.0 |
+| Active                                                                      |        | 2:10 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  33.8 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  23.1 |
+| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  40.0 |
+| STARTED Rename transformers to adapters                                     |        |      | 0:04 |   3.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -107,6 +108,22 @@ what needs to be done to remove it.
 Seems like we are only using associative container at present. We
 could probably replace the enumeration with a simple flag
 
+*** STARTED Rename transformers to adapters                           :story:
+    CLOCK: [2017-08-31 Thu 09:02]--[2017-08-31 Thu 09:06] =>  0:04
+
+In the past we used the term "transformer" to mean a class that
+converts types from one representation to another. However, now that
+we are using domain terminology, the term "transforms" is taken to
+mean a model transformation. To avoid confusion we should rename the
+existing transformers to converters, adapters or some other
+out-of-the-way name.
+
+Affected models:
+
+- quilt.cpp
+- quilt.csharp
+- yarn.dia
+
 *** Analysis on profiles and concepts                                 :story:
 
 When concepts were introduced, it was clear that something was not
@@ -128,15 +145,6 @@ We consume the object templates via stereotypes.
 Profiles share a lot of similarities with object templates:
 
 - they are containers of annotation templates
-
-*** Rename transformers to adapters                                   :story:
-
-In the past we used the term "transformer" to mean a class that
-converts types from one representation to another. However, now that
-we are using domain terminology, the term "transforms" is taken to
-mean a model transformation. To avoid confusion we should rename the
-existing transformers to converters, adapters or some other
-out-of-the-way name.
 
 *** Throw on unsupported stereotypes                                  :story:
 
