--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,18 +14,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-31 Thu 09:06]
+#+CAPTION: Clock summary at [2017-09-01 Fri 11:09]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *2:10* |      |      | 100.0 |
+| *Total time*                                                                | *3:08* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 2:10   |      |      | 100.0 |
-| Active                                                                      |        | 2:10 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  33.8 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  23.1 |
-| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  40.0 |
-| STARTED Rename transformers to adapters                                     |        |      | 0:04 |   3.1 |
+| Stories                                                                     | 3:08   |      |      | 100.0 |
+| Active                                                                      |        | 3:08 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  23.4 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  16.0 |
+| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  27.7 |
+| COMPLETED Clean-up readme                                                   |        |      | 0:58 |  30.9 |
+| STARTED Rename transformers to adapters                                     |        |      | 0:04 |   2.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -107,6 +108,17 @@ what needs to be done to remove it.
 
 Seems like we are only using associative container at present. We
 could probably replace the enumeration with a simple flag
+
+*** COMPLETED Clean-up readme                                         :story:
+    CLOSED: [2017-09-01 Fri 11:09]
+    CLOCK: [2017-09-01 Fri 10:11]--[2017-09-01 Fri 11:09] =>  0:58
+
+There are a number of minor changes that need to be done to the readme
+file:
+
+- fix typos
+- bintray binaries are no longer experimental as we've been using them
+- make build instructions a bit less repetitive
 
 *** STARTED Rename transformers to adapters                           :story:
     CLOCK: [2017-08-31 Thu 09:02]--[2017-08-31 Thu 09:06] =>  0:04
