patches: delete change qualified to unordered map
This has bit-rotted with all the changes to yarn. Its also fairly
trivial so no point in keeping the patch.

--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -2105,8 +2105,7 @@ implement it.
 For some reason we are using a map, but its not clear that we need
 sorting. Change it to unordered and see what breaks.
 
-It seems we get errors in serialisation when using the map. Create a
-patch and investigate this later.
+It seems we get errors in serialisation when using the map.
 
 *** Add support for Decimal numbers in C++                            :story:
 
